idea/testData/checker/recovery/returnInFileAnnotation.fir.kt
@file:<error descr="[UNRESOLVED_REFERENCE] Unresolved reference: suppress">suppress</error>(return <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: a">a</error>)
